# lepton

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Cargo.toml  Makefile  Makefile.am  README  README.md  autogen.sh  bitops.cpp  bitops.h  bitopsalt.cpp  component_info.h  configure.ac  jpgcoder.cpp  lepton.spec  license.txt  simple_decoder.cpp  simple_encoder.cpp  test.sh  test_compression.sh  train_luma_dc.py  train_nn.py  uncompressed_components.cpp  uncompressed_components.h
analysis/: make-cdf  time-parser
dependencies/: config.h
dependencies/brotli/c/dec/: bit_reader.h
dependencies/brotli/dec/: decode.c  huffman.c  port.h
dependencies/brotli/enc/: encode.cc  encode_parallel.cc  entropy_encode.cc  literal_cost.h
dependencies/md5/: md5.c  md5.h
dependencies/xz/src/liblzma/api/lzma/: version.h
images/: gold-legacy.lep  iphone16.lep  narrowrst.lep
src/: .gitignore  Makefile.am  arithmetic_coder.rs  base_coders.hh  bit_writer.rs  bitops.cc  bitops.hh  bitopsalt.cc  bitopsalt.hh  byte_converter.rs  codec.rs  component_info.hh  compressor.rs  constants.rs  decompressor.rs  htables.hh  interface.rs  io.rs  iostream.rs  jpgcoder.cc  jpgcoder.hh  lib.rs  macros.rs  primary_header.rs  resizable_buffer.rs  secondary_header.rs  simple_decoder.cc  simple_decoder.hh  simple_encoder.cc  simple_encoder.hh  test.cc  test_iostream.rs  thread_handoff.rs  uncompressed_components.cc  uncompressed_components.hh  util.rs  vp8_decoder.cc  vp8_decoder.hh  vp8_encoder.cc  vp8_encoder.hh
src/ans/: rans64.hh
src/codec/: codec.rs  factory.rs  mod.rs  specialization.rs
src/compressor/: brotli_encoder.rs  compressor.rs  lepton_encoder.rs  mod.rs  permissive.rs  util.rs
src/decompressor/: decompressor.rs  lepton_decoder.rs  mod.rs  primary_header.rs  primary_header_parser.rs  secondary_header.rs  secondary_header_parser.rs
src/io/: Allocator.hh  BoundedMemWriter.hh  BrotliCompression.cc  BrotliCompression.hh  BrotliWrapper.cc  BrotliWrapper.hh  BufferedIO.hh  Compression.cc  Compression.hh  DecoderPlatform.hh  Error.hh  Makefile.am  MemMgrAllocator.cc  MemMgrAllocator.hh  MemReadWriter.cc  MemReadWriter.hh  MuxReader.hh  Reader.hh  Seccomp.cc  Seccomp.hh  SwitchableCompression.hh  Zlib0.cc  Zlib0.hh  ZlibCompression.cc  ZlibCompression.hh  ioutil.cc  ioutil.hh  seccomp-bpf.hh
src/jpeg/: constants.rs  decoder.rs  encoder.rs  huffman.rs  jpeg.rs  marker.rs  mod.rs  parser.rs  test_util.rs  util.rs
src/jpeg_decoder/: decoder.rs  error.rs  huffman.rs  idct.rs  jpeg.rs  mod.rs  parser.rs  stream_decoder.rs  upsampler.rs  util.rs
src/jpeg_decoder/worker/: immediate.rs  mod.rs  threaded.rs
src/js/: lepton-scalar.html  lepton-worker.js  lepton-wrapper.js  post.js  pre.js
src/lepton/: .gitignore  Makefile.am  base_coders.hh  benchmark.cc  benchmark_file.cc  bitops.cc  bitops.hh  component_info.hh  concat.cc  evaluate_int_encodings.py  find-big  fork_serve.cc  fork_serve.hh  generic_compress.cc  generic_compress.hh  htables.hh  idct.cc  idct.hh  jpgcoder.cc  jpgcoder.hh  lepton_codec.cc  lepton_codec.hh  main.cc  print-model.cc  recoder.cc  recoder.hh  simple_decoder.cc  simple_decoder.hh  simple_encoder.cc  simple_encoder.hh  smalljpg.hh  socket_serve.cc  socket_serve.hh  stream_interfaces.hh  test_custom_table.sh  test_driver.cc  test_harness.cc  test_invariants.cc  test_trunc.sh  thread_handoff.cc  (+9 more)
src/vp8/: Makefile.am
src/vp8/decoder/: Makefile.am  VPX_AUTHORS  ans_bool_reader.hh  block.hh  bool_decoder.hh  boolreader.cc  boolreader.hh  coefs.cc  coefs.hh  decoder.cc  decoder.hh  vpx_bool_reader.hh
src/vp8/encoder/: Makefile.am  ans_bool_writer.hh  bool_encoder.hh  boolwriter.cc  boolwriter.hh  encoder.cc  encoder.hh  vpx_bool_writer.hh
src/vp8/model/: JpegArithmeticCoder.cc  JpegArithmeticCoder.hh  Makefile.am  block.hh  branch.hh  classifier_plugin.hh  color_context.hh  context.hh  dc_network.hpp  jpeg_meta.hh  legacy.hh  model.cc  model.hh  nn_framework.cc  nn_framework.hh  numeric.cc  numeric.hh  tf_perceptron_chroma1.hh  tf_perceptron_chroma2.hh  tf_perceptron_long_chroma1.hh  tf_perceptron_long_chroma2.hh  tf_perceptron_luma.hh  trained.cc  weight.hh
src/vp8/util/: Makefile.am  aligned_block.hh  arithmetic_code.hh  billing.cc  billing.hh  block_based_image.cc  block_based_image.hh  block_context.hh  debug.cc  debug.hh  fixed_array.hh  generic_worker.cc  generic_worker.hh  handle.hh  memory.cc  memory.hh  mm_mullo_epi32.hh  mmap.cc  mmap.hh  nd_array.hh  option.hh  options.hh  plane.hh  slice.hh  vpx_config.hh
test_suite/: forktester.py  smalljpg.hh  sockettester.py  test_16threads.sh  test_2nd_block.sh  test_3rd_block.sh  test_clobber.sh  test_concat.sh  test_driver.cc  test_embedded.sh  test_future_compat.sh  test_harness.cc  test_invariants.cc  test_last_block.sh  test_legacy.sh  test_permissive.sh  test_roundtrip.sh  test_trunc.sh  timing_driver.cc
