[package]
name = "lepton"
version = "0.0.1"
authors = ["Daniel Reiter Horn <danielrh@dropbox.com>", "Mike Liu <zliu@dropbox.com>", "The Lepton Authors"]
description = "All included code is safe."
license = "BSD-3-Clause/MIT"
documentation = "https://github.com/dropbox/lepton/blob/master/README.md"
homepage = "https://github.com/dropbox/lepton"
repository = "https://github.com/dropbox/lepton"
keywords = ["lepton"]
readme = "README.md"
autobins = false

[[bin]]
doc = false
name = "lepton"

[dependencies]
"alloc-no-stdlib" = "~1.3"
"bit-vec" = "0.5.0"
"brotli" = "~2.5"
"brotli-decompressor" = "~1.3"
"lepton-mux" = "~0.0.1"
